* Minor update: (190205)
- Added [HideThatBanner] to the ALPHA list.
- Added [QBazarr OWatcher3] to the OMEGA list.

* Minor update: (181217)
- Added [QJDK11 PlexPlayer Windscribe] to the ALPHA list.
- Added [RunLast] to the OMEGA list.
- Move source list display location.

* Minor update: (181113)
- Added [netmgr] to the ALPHA list.
- Small processing speed improvements.
- Shorter log messages.

* Minor update: (181111)
- Added [MySQL8 Brook] to the ALPHA list.

* Minor update: (181109)
- Prefer custom package lists if found. [ALPHA.custom] will be used in place of [ALPHA.default], same for OMEGA.
- Include 'completed' after each logged operation.

* Minor update: (181022)
- Added [Neo4J WireGuard] to the ALPHA list.
- Added [SonarrTrackTV QSonarr3 SickChill QSickChill] to the OMEGA list.

* Minor update: (180909)
- Added [DotNETSDK firebird] to the ALPHA list.

* Minor update: (180808)
- Moved 'package managers' section ahead of [NVIDIA_GPU_DRV] in the ALPHA list.

* Minor update: (180706)
- Added [QJDK10] to the ALPHA list.

* Minor update: (180630)
- Added new 'multimedia tools' section with [ffmpeg Qffmpeg] to the ALPHA list.
- Added [Deluge QBittorrent QBittorrent4 rtorrent] to the OMEGA list.

* Minor update: (180620)
- Added [InfluxDB QOpenVPN TincVPN] to the ALPHA list.
- Moved [QHeadPhones] to load after [Headphones] in the OMEGA list.

* Minor update: (180617)
- Added [HybridBackup] to the ALPHA list.
- Added [HappyGet2] to the OMEGA list.
- Moved [linux-station] to load after [container-station] in the ALPHA list.

* Minor update: (180615)
- Moved [Qsirch] to load after [JRE] in the ALPHA list.

* Minor update: (180612)
- Added [PostgreSQL QPostgreSQL] to the ALPHA list.

* Minor update: (180606)
- Added new 'databases' section with [QMongoDB QMariaDB CubeSQL PimCore] to the ALPHA list.
- Added [Caddy] to the ALPHA list.
- Added [Lidarr] to the OMEGA list.

* Minor update: (180422)