@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="190205"
+QPKG_VER="190211"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="A sorter for your installed QPKGs to ensure they launch in a preset order when your NAS next boots-up."
 QPKG_RC_NUM="500"
